Trigger Railway redeploy