@@ -1,26 +1,31 @@
 package com.socialsea.security;
 
-import com.socialsea.model.User;
-import com.socialsea.repository.UserRepository;
-import jakarta.servlet.*;
-import jakarta.servlet.http.*;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtFilter extends OncePerRequestFilter {
 
-    private final JwtUtil jwtUtil;
-    private final UserRepository userRepo;
+    @Autowired
+    private JwtUtil jwtUtil;
 
-    public JwtFilter(JwtUtil jwtUtil, UserRepository userRepo) {
-        this.jwtUtil = jwtUtil;
-        this.userRepo = userRepo;
+    @Override
+    protected boolean shouldNotFilter(HttpServletRequest request) {
+        String path = request.getServletPath();
+        return path.startsWith("/auth")
+            || path.startsWith("/anonymous")
+            || path.startsWith("/error");
     }
 
     @Override
@@ -34,24 +39,28 @@ public class JwtFilter extends OncePerRequestFilter {
 
         if (header != null && header.startsWith("Bearer ")) {
             String token = header.substring(7);
+
             try {
-                String username = jwtUtil.extractUsername(token);
+                if (!jwtUtil.isTokenExpired(token)) {
+                    String email = jwtUtil.extractEmail(token);
+                    String role = jwtUtil.extractRole(token);
 
-                if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-                    User user = userRepo.findByUsername(username).orElse(null);
+                    // Optional: Check if user is banned
+                    // User user = userRepository.findByEmail(email).orElse(null);
+                    // if (user != null && user.isBanned()) { ... }
 
-                    if (user != null) {
-                        if (user.isBanned()) {
-                            throw new RuntimeException("User banned");
-                        }
-                        var auth = new UsernamePasswordAuthenticationToken(
-                                username, null, Collections.emptyList()
-                        );
-                        SecurityContextHolder.getContext().setAuthentication(auth);
-                    }
+                    UsernamePasswordAuthenticationToken auth =
+                            new UsernamePasswordAuthenticationToken(
+                                    email,
+                                    null,
+                                    List.of(new SimpleGrantedAuthority("ROLE_" + role))
+                            );
+
+                    SecurityContextHolder.getContext().setAuthentication(auth);
                 }
             } catch (Exception e) {
-                // Token is invalid or expired; proceed without setting authentication
+                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                return;
             }
         }
 
